style: remove icons, fix gap

--- a/src/components/mobile-menu-container/mobile-menu-container.module.css
+++ b/src/components/mobile-menu-container/mobile-menu-container.module.css
@@ -39,7 +39,7 @@
 .unauthenticatedControlButtons {
 	align-items: center;
 	display: flex;
-	gap: 24px;
+	gap: 12px;
 	justify-content: space-between;
 
 	& > * {
